# example-event-api

./: Makefile  README.md  main.py  pyproject.toml  requirements.txt  requirements_dev.txt
.devcontainer/: devcontainer.json
app/: main.py
app/models/: alert.py  event.py  rule.py  rules.py
app/routers/: clear.py  event.py  health.py
app/services/: rule_manager.py  state_manager.py
app/utils/: health_check.py
tests/e2e/event/: test_code_1100.py  test_code_123.py  test_code_30.py  test_code_300.py
tests/integration/event/: test_event.py  test_event_concurrency.py  test_event_ordering.py
tests/integration/rules/: test_rule_code_123.py
tests/integration/utils/: test_health.py  test_health_check.py
tests/unit/event/: test_event_request.py  test_event_response.py
tests/unit/services/state_manager/: test_base.py  test_get_recent_user_events.py  test_get_recent_user_events_by_type.py  test_get_user_events.py  test_get_user_events_by_time_range.py  test_locking.py  test_save_event.py
tests/utils/: fixtures.py
