[project]
name = "Midnite API"
version = "1.0.0"
authors = [
    { name = "Gareth E" },
]
description = "Midnite Take-Home"
readme = "README.md"
requires-python = ">=3.10"

[tool.pytest.ini_options]
addopts = [
    "--capture=no",
    "--showlocals"
]
pythonpath = ["."]
testpaths = [
    "tests"
]

[tool.ruff]
line-length = 120