[project]
name = "Event API"
version = "1.0.0"
authors = [
    { name = "Gareth E" },
]
description = "Example Event API"
readme = "README.md"
requires-python = ">=3.10"

[tool.pytest.ini_options]
asyncio_mode = "auto"

addopts = [
    "--capture=no",
    "--showlocals"
]
pythonpath = ["."]
testpaths = [
    "tests"
]

[tool.ruff]
line-length = 120